Tasarım Detayları Tamamlandı

--- a/Teknik_Takip/Teknik_Takip/Teknik_Takip.csproj
+++ b/Teknik_Takip/Teknik_Takip/Teknik_Takip.csproj
@@ -290,8 +290,23 @@
     <None Include="Resources\21.jpg" />
     <None Include="Resources\userblue.png" />
     <None Include="Resources\lockblue.png" />
+    <None Include="Resources\face.png" />
+    <None Include="Resources\check_blue.png" />
+    <None Include="Resources\check.png" />
+    <None Include="Resources\cancel.png" />
+    <None Include="Resources\close.png" />
+    <None Include="Resources\close-button.png" />
+    <None Include="Resources\emailblue.png" />
+    <None Include="Resources\email.png" />
     <Content Include="Resources\lock-16.png" />
     <None Include="Resources\lock-161.png" />
+    <None Include="Resources\name.png" />
+    <None Include="Resources\name %281%29.png" />
+    <None Include="Resources\name_blue.png" />
+    <None Include="Resources\minimize.png" />
+    <None Include="Resources\minimize %281%29.png" />
+    <None Include="Resources\minimize %282%29.png" />
+    <None Include="Resources\test.png" />
     <Content Include="Resources\user-16.png" />
     <None Include="Resources\user-161.png" />
     <Content Include="TextFile1.txt" />
